# RoverControlSystem

./: .dockerignore  .gitignore  README.md  build.sh  deploy.sh  start.sh  start_docker_dev.sh  start_host.sh  start_host_fresh.sh  start_jetson.sh  start_jetson_fresh.sh  update_ros.sh
auto_launch/: launch.py  launch.xml
docker_scripts/: dockerfile
docker_scripts/host/: docker-compose-linux.yml  docker-compose-realsense-gui.yml  docker-compose.yml
docker_scripts/host/dockerDev/: docker-compose-linux.yml  docker-compose.yml  hostDockerfile
docker_scripts/jetson/: docker-compose.yml  jetsonDockerfile  ros_entrypoint.sh
docs/: rcs_in_practice.drawio  tech_specs.md
rcs_core/: package.xml  setup.py
ros/launch/: launch.py  launch.sh
ros/src/rcs_core/: CMakeLists.txt  package.xml
ros/src/rcs_core/src/: Core.cpp  Core.h  Main.cpp  main.cpp
ros/src/rcs_interfaces/: CMakeLists.txt  package.xml
ros/src/rcs_interfaces/action/: NavigateTo.action
ros/src/rcs_interfaces/msg/: ConfirmStart.msg  Heartbeat.msg
ros/src/rcs_interfaces/srv/: SharedConfig.srv
ros/src/realsense_interop/: CMakeLists.txt  package.xml
ros/src/realsense_interop/src/: main.cpp
src/rcs_core/: package.xml  setup.cfg  setup.py
src/rcs_core/rcs_core/: core.py  tester.py
src/rcs_interfaces/: CMakeLists.txt  package.xml
src/rcs_interfaces/msg/: BandwidthReduction.msg  ComponentStatus.msg  Heartbeat.msg  RemoteSystemInit.msg
